Fixed Bug#6109, 'mysql' command line client segfaults on 'quit' command. It also did not write ~/.mysql_history file. The problem was in alloc(), which probably does not work on HP-UX-11.23 ia64 platform. Changed some macros into functions for better maintenance and debugging.